Open java.lang package for reflection - It prevents the Illegal reflective access warning in com.hazelcast.util.FilteringClassLoader